Updated Help file

--- a/DScaler/Help/32spec.htm
+++ b/DScaler/Help/32spec.htm
@@ -38,7 +38,8 @@ height="1"></td>
 "DScaler Logo"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
-<!-- #BeginEditable "Page%20Title" -->DScaler Authors 
+<!-- #BeginEditable "Page%20Title" -->
+3:2 Pulldown Alogrithm 
 <!-- #EndEditable --></b></font></td>
 </tr>
 
