--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -3,7 +3,7 @@
 <!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" -->
-<title>DScaler -- Greedy 2 Frame Method</title>
+<title>DScaler -- What's New</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
 "text/html; charset=iso-8859-1">
@@ -39,7 +39,7 @@ height="1"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
 <!-- #BeginEditable "Page%20Title" -->
-Greedy 2 Frame Method
+What's New
 <!-- #EndEditable --></b></font></td>
 </tr>
 
@@ -53,57 +53,45 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3">
-<!-- #BeginEditable "Text" -->
-<p>This method tries to combine the best features of the 2-frame
-algorithm with the looking ahead ability of the greedy method.  I
-find this methods works well on sports and other high motion
-material.  With static images and low quality sources there may
-be unacceptable levels of bobbing.</p>
+<td colspan="3"><!-- #BeginEditable "Text" -->
+<h1>DScaler - version 3.0.7</h1>
 
-<p>This method uses four fields and has a configuarable motion detect.  Motion is
-detected on a two pixel basis.</p>
-
-<p><b><font face="Arial" size="4">Who Should Use
-It?</font></b></p>
-
-<p>Everybody. This is the current default method for faster processors as it gives 
-the best all round performance.</p>
-
-<p><b><font face="Arial" size="4">Settings</font></b></p>
-
-<table border="1">
-<tr>
-<th>Setting</th>
-<th>Default</th>
-<th>Description</th>
-</tr>
-
-<tr>
-<td>Greedy 2 Frame Luma Threshold</td>
-<td>4</td>
-<td>Luma differences above this will be interpreted as movement.</td>
-</tr>
-
-<tr>
-<td>Greedy 2 Frame Chroma Threshold</td>
-<td>8</td>
-<td>Chroma differences above this will be interpreted as movement.</td>
-</tr>
-
-</table>
-
-
+<p>What's new:<br>
+    Massive improvements to 2:2 pulldown detection.<br>
+    Improvements to 3:2 pulldown detection on material with bad
+cadence.<br>
+    New mixer control for users not bypassing the PC with
+sound.<br>
+    Channel editing with fine tuning<br>
+    New UI support for all most ini file settings<br>
+    Greedy 2 frame improved (by fixing glaring bug).<br>
+    Overlay fixes.<br>
+    Auto-Calibration.<br>
+    Experimental Time-shifting support.<br>
+    Improved auto-aspect ratio detect.<br>
+    Auto-format detection (switches between PAL and NTSC by
+default)<br>
+    Updated Linear Correction Filter with alpha non-linear zoom
+mode<br>
+    Improved Sound support<br>
+    Additional card support<br>
+    Teletext fixes (it's working pretty well on UK channels
+now)<br>
+    NTSC50 mode for Chris Williams<br>
+    Always on top full screen flag<br>
+    Gamma filter fixed<br>
+    Various Bug Fixes<br>
+    French, Czech & Greek code pages for teletext<br>
+    More flexible zoom and positioning<br>
+    Alpha Logo Killer plug-in<br>
+    Alpha Sharpness Filter<br>
+    Tom Barry's new all-singing all-dancing Greedy High Motion plugin<br>
+    Increased range of contrast and saturation<br>
+    Added Lindsey Dubb's Old Game Filter<br>
+    Added PAL-NC mode for Argentina<br>
+</p>
 <!-- #EndEditable -->
 </td>
-</tr>
-
-<tr>
-<td colspan="3"> </td>
-</tr>
-
-<tr>
-<td colspan="3"></td>
 </tr>
 
 <tr>
@@ -117,6 +105,8 @@ the best all round performance.</p>
 </td>
 </tr>
 </table>
+
+<p> </p>
 
 <!-- #EndTemplate -->
 </body>
