--- a/DScaler/Help/Help.htm
+++ b/DScaler/Help/Help.htm
@@ -3,7 +3,7 @@
 <!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" -->
-<title>DScaler -- Greedy 2 Frame Method</title>
+<title>DScaler -- Help</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
 "text/html; charset=iso-8859-1">
@@ -39,7 +39,7 @@ height="1"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
 <!-- #BeginEditable "Page%20Title" -->
-Greedy 2 Frame Method
+DScaler Help
 <!-- #EndEditable --></b></font></td>
 </tr>
 
@@ -55,55 +55,26 @@ height="2"></td>
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
-<p>This method tries to combine the best features of the 2-frame
-algorithm with the looking ahead ability of the greedy method.  I
-find this methods works well on sports and other high motion
-material.  With static images and low quality sources there may
-be unacceptable levels of bobbing.</p>
-
-<p>This method uses four fields and has a configuarable motion detect.  Motion is
-detected on a two pixel basis.</p>
-
-<p><b><font face="Arial" size="4">Who Should Use
-It?</font></b></p>
-
-<p>Everybody. This is the current default method for faster processors as it gives 
-the best all round performance.</p>
-
-<p><b><font face="Arial" size="4">Settings</font></b></p>
-
-<table border="1">
-<tr>
-<th>Setting</th>
-<th>Default</th>
-<th>Description</th>
-</tr>
-
-<tr>
-<td>Greedy 2 Frame Luma Threshold</td>
-<td>4</td>
-<td>Luma differences above this will be interpreted as movement.</td>
-</tr>
-
-<tr>
-<td>Greedy 2 Frame Chroma Threshold</td>
-<td>8</td>
-<td>Chroma differences above this will be interpreted as movement.</td>
-</tr>
-
-</table>
-
-
+<p>Welcome to the new improved DScaler help files.</p>
+<p>The developers have spent a lot of time trying to put as much imformation as
+we can in this file.  The help file is organized in sections:</p>
+<ol>
+<li><p>DScaler Help - This section contains basic information about DScaler including
+our Licence, installation instructions and keyboard shortcuts.</p>
+<li><p>Features - This section contains additional information about some of DScaler's
+important features.</p>
+<li><p>Deinterlace Methods - This section contains detailed information about each of DScaler's
+video deinterlacing methods.</p>
+<li><p>Filters - This section contains detailed information about each of DScaler's
+video processing filters.</p>
+<li><p>Advanced - This section contains very detailed information about the 
+configuarable parameters in DScaler.  This section is intended for advanced users
+who wish to tweak DScaler.</p>
+<li><p>Developers - This section contains information for those who want to contribute
+to the DScaler project.</p>
+<ol>
 <!-- #EndEditable -->
 </td>
-</tr>
-
-<tr>
-<td colspan="3"> </td>
-</tr>
-
-<tr>
-<td colspan="3"></td>
 </tr>
 
 <tr>
@@ -117,6 +88,8 @@ the best all round performance.</p>
 </td>
 </tr>
 </table>
+
+<p> </p>
 
 <!-- #EndTemplate -->
 </body>
