Updated Help files

--- a/htdocs/Help/Greedy2Frame.htm
+++ b/htdocs/Help/Greedy2Frame.htm
@@ -55,6 +55,12 @@ height="2"></td>
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
+<p>This method tries to combine the best features of the 2-frame
+algorithm with the looking ahead ability of the greedy method.  I
+find this methods works well on sports and other high motion
+material.  With static images and low quality sources there may
+be unacceptable levels of bobbing.</p>
+
 <p>This method uses four fields and has a configuarable motion detect.  Motion is
 detected on a two pixel basis.</p>
 
