--- a/htdocs/Help/Standards.htm
+++ b/htdocs/Help/Standards.htm
@@ -7,7 +7,8 @@
 <title>Coding Standards</title>
 </head>
 <body link="#0000ff" vlink="#800080">
-<p align="CENTER"><b><font size="6">Coding Standards</font></b></p>
+<p align="CENTER"><b><font size="6">Coding
+Standards</font></b></p>
 
 <p align="CENTER"><b>The Deinterlace Project</b></p>
 
