--- a/htdocs/Help/32Pulldown.htm
+++ b/htdocs/Help/32Pulldown.htm
@@ -35,7 +35,7 @@ height="1"></td>
 
 <tr>
 <td width="160"><img src="images/dscalerlogo.jpg" alt=
-"DScaler Logo"></td>
+"DScaler Logo" width="247" height="105"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
 <!-- #BeginEditable "Page%20Title" -->3:2 Pulldown Settings
