--- a/htdocs/Help/Install.htm
+++ b/htdocs/Help/Install.htm
@@ -35,7 +35,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 
 <tr>
 <td width="160"><img src="images/dscalerlogo.jpg" alt=
-"DScaler logo"></td>
+"DScaler logo" width="247" height="105"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
 <!-- #BeginEditable "Page%20Title" -->Installation &amp; Setup 
@@ -87,31 +87,31 @@ the card, choose the correct type depending on your region.</p>
 <p><br>
  4. Select required input from Settings/Video Input</p>
 
-<h3><img src="images/setup_settings_video_input.jpg" border="2"></h3>
+<h3><img src="images/setup_settings_video_input.jpg" border="2" width="454" height="244"></h3>
 
 <p><br>
  5. Select video format standard from Settings/Video Format
 menu</p>
 
-<h3><img src="images/setup_settings_video_format.jpg" border="2"></h3>
+<h3><img src="images/setup_settings_video_format.jpg" border="2" width="402" height="263"></h3>
 
 <p><br>
  6. Select audio input from Settings/Audio Input (if applicable
 for your setup).</p>
 
-<h3><img src="images/setup_settings_audio_input.jpg" border="2"></h3>
+<h3><img src="images/setup_settings_audio_input.jpg" border="2" width="386" height="217"></h3>
 
 <p><br>
  7. Select MSP/Radio Options (If your card has a sound chip
 onboard)</p>
 
-<h3><img src="images/setup_hardware_msp_radio.jpg" border="2"></h3>
+<h3><img src="images/setup_hardware_msp_radio.jpg" border="2" width="454" height="410"></h3>
 
 <p><br>
  8. Choose Channel Scan (if you are using the internal tuner of
 your capture card)</p>
 
-<h3><img src="images/setup_settings_channels_menu.jpg" border="2"></h3>
+<h3><img src="images/setup_settings_channels_menu.jpg" border="2" width="212" height="127"></h3>
 
 <p><br>
  9. You will be presented with a dialog box. Choose the
@@ -127,7 +127,7 @@ height="260" border="2"></h3>
  10. Choose the preferred aspect ratio for your source, or let
 DScaler autodetect the proper aspect ratio.</p>
 
-<h3><img src="images/setup_ar_advanced_ratios.jpg" border="2"></h3>
+<h3><img src="images/setup_ar_advanced_ratios.jpg" border="2" width="548" height="410"></h3>
 
 <p><br>
  For more information about the advanced features available via
