--- a/htdocs/Help/FAQ.htm
+++ b/htdocs/Help/FAQ.htm
@@ -35,7 +35,7 @@ height="1"></td>
 
 <tr>
 <td width="160" rowspan="2"><img src="images/dscalerlogo.jpg"
-alt="DScaler Logo"></td>
+alt="DScaler Logo" width="247" height="105"></td>
 <td colspan="2" align="right" valign="top"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size=
 "1"><!-- #BeginEditable "Language%20Selector" -->
