--- a/DScaler/Help/32Pulldown.HTM
+++ b/DScaler/Help/32Pulldown.HTM
@@ -71,13 +71,13 @@ alogrithm</a>.  This uses field differences to detect field repeats.</p>
 
 <tr>
 <td>NTSC Pulldown Repeat Count In</td>
-<td>3</td>
+          <td>4</td>
 <td>Number of times film mode must be spotted in a row before a switch to film mode</td>
 </tr>
 
 <tr>
 <td>NTSC Pulldown Repeat Count Out</td>
-<td>1</td>
+          <td>2</td>
 <td>Each time bad pulldown is encountered the count is decremented starting at 
 "PAL Pulldown Repeat Count In", once the count reaches this 
 value then we go back to video mode.</td>
@@ -168,7 +168,7 @@ runs out or a new film mode is detected.</td>
 </tr>
 </table>
 
-<!-- #EndTemplate -->
-</body>
+</body><!-- #EndTemplate -->
+
 </html>
 
