--- a/DScaler/Help/Aspect.HTM
+++ b/DScaler/Help/Aspect.HTM
@@ -56,100 +56,97 @@ height="2"></td>
 <p>Most of the aspect ratio settings can be controlled from the menu.  The 
 settings shown below are those that cannot be accessed in this way</p>
 
-<table border="1">
-<tr>
-<th>Setting</th>
-<th>Default</th>
-<th>Description</th>
-</tr>
-
-<tr>
-<td>Custom Screen Aspect</td>
-<td>1335</td>
-<td>The aspect value used when custom is selected for display screen ratio.</td>
-</tr>
-
-<tr>
-<td>Auto Detect Aspect Sensitivity</td>
-<td>40</td>
-<td>Luma values below this are considered balck by the auto aspect ratio code.</td>
-</tr>
-
-<tr>
-<td>Ignore Non-Black Pixels</td>
-<td>3</td>
-<td>Used by auto aspect ratio code, if there are more non black pixels than this 
-then the line is not considered black/</td>
-</tr>
-
-<tr>
-<td>Zoom In Frame Count</td>
-<td>60</td>
-<td>Number of times we need to detect a letterboxed picture before changing mode</td>
-</tr>
-
-<tr>
-<td>Aspect History Time</td>
-<td>300</td>
-<td>???</td>
-</tr>
-
-<tr>
-<td>Aspect Consistency Time</td>
-<td>15</td>
-<td>???</td>
-</tr>
-
-<tr>
-<td>Bounce Period (Secs)</td>
-<td>1800</td>
-<td>Number of seconds between bounce movements</td>
-</tr>
-
-<tr>
-<td>Bounce Timer Period (ms)</td>
-<td>1000</td>
-<td>Frequency that bounce time is checked.</td>
-</tr>
-
-<tr>
-<td>Bounce Amplitude (%)</td>
-<td>100</td>
-<td>Percenage of full range that bounce operates on</td>
-</tr>
-
-<tr>
-<td>Orbit Timer Period (ms)</td>
-<td>60000</td>
-<td>Period between orbit movements</td>
-</tr>
-
-<tr>
-<td>Orbit Size</td>
-<td>8</td>
-<td>Number of pixels range that orbit operates on.  Overscan must be at least this 
-value.</td>
-</tr>
-<tr>
-
-<td>Skip Percentage</td>
-<td>17</td>
-<td>Amount of left and right edges of the screen that should not be used by the 
-black bar detection code.</td>
-</tr>
-
-<td>Chroma Range</td>
-<td>16</td>
-<td>Used by balck bar detection.  This is the range of deviation from back allowed 
-in chroma information.</td>
-</tr>
-
-<td>Zoom Out Frame Count</td>
-<td>3</td>
-<td>Number of consecutive frame before autodetction code will switch to a lower ratio.</td>
-</tr>
-
-</table>
+      <table border="1">
+        <tr> 
+          <th>Setting</th>
+          <th>Default</th>
+          <th>Description</th>
+        </tr>
+        <tr> 
+          <td>Custom Screen Aspect</td>
+          <td>1335</td>
+          <td>The aspect value used when custom is selected for display screen 
+            ratio.</td>
+        </tr>
+        <tr> 
+          <td>Auto Detect Aspect Sensitivity</td>
+          <td>40</td>
+          <td>Luma values below this are considered balck by the auto aspect ratio 
+            code.</td>
+        </tr>
+        <tr> 
+          <td>Ignore Non-Black Pixels</td>
+          <td>3</td>
+          <td>Used by auto aspect ratio code, if there are more non black pixels 
+            than this then the line is not considered black/</td>
+        </tr>
+        <tr> 
+          <td>Zoom In Frame Count</td>
+          <td>60</td>
+          <td>Number of times we need to detect a letterboxed picture before changing 
+            mode</td>
+        </tr>
+        <tr> 
+          <td>Zoom Out Frame Count</td>
+          <td>3</td>
+          <td>Number of consecutive frame before autodetction code will switch 
+            to a lower ratio.</td>
+        </tr>
+        <tr> 
+          <td>Aspect History Time</td>
+          <td>300</td>
+          <td>Number of seconds the successive ratios are saved and can be restored 
+            quickly if detected.</td>
+        </tr>
+        <tr> 
+          <td>Aspect Consistency Time</td>
+          <td>15</td>
+          <td>???</td>
+        </tr>
+        <tr> 
+          <td>Skip Percentage</td>
+          <td>17</td>
+          <td>Amount of left and right edges of the screen that should not be 
+            used by the black bar detection code.</td>
+        </tr>
+        <tr> 
+          <td>Chroma Range</td>
+          <td>16</td>
+          <td>Used by balck bar detection. This is the range of deviation from 
+            back allowed in chroma information.</td>
+        </tr>
+        <tr> 
+          <td>Allow greater ratio than screen ratio</td>
+          <td>ON</td>
+          <td>Can be used (when OFF) to disable ratio greater than screen ratio.</td>
+        </tr>
+        <tr> 
+          <td>Bounce Period (Secs)</td>
+          <td>1800</td>
+          <td>Number of seconds between bounce movements</td>
+        </tr>
+        <tr> 
+          <td>Bounce Timer Period (ms)</td>
+          <td>1000</td>
+          <td>Frequency that bounce time is checked.</td>
+        </tr>
+        <tr> 
+          <td>Bounce Amplitude (%)</td>
+          <td>100</td>
+          <td>Percenage of full range that bounce operates on</td>
+        </tr>
+        <tr> 
+          <td>Orbit Timer Period (ms)</td>
+          <td>60000</td>
+          <td>Period between orbit movements</td>
+        </tr>
+        <tr> 
+          <td>Orbit Size</td>
+          <td>8</td>
+          <td>Number of pixels range that orbit operates on. Overscan must be 
+            at least this value.</td>
+        </tr>
+      </table>
 
 <!-- #EndEditable -->
 </td>
@@ -175,7 +172,7 @@ in chroma information.</td>
 </tr>
 </table>
 
-<!-- #EndTemplate -->
-</body>
+</body><!-- #EndTemplate -->
+
 </html>
 
