--- a/DScaler/Help/Logging.HTM
+++ b/DScaler/Help/Logging.HTM
@@ -59,26 +59,29 @@ height="2"></td>
 to bug reports or for developement.  Under normal circumstances logging should be off. 
 When switched on infomation is written to DScaler.txt in the DScaler directory.</p>
 
-<table border="1">
-<tr>
-<th>Setting</th>
-<th>Default</th>
-<th>Description</th>
-</tr>
-
-<tr>
-<td>Debug Log</td>
-<td>OFF</td>
-<td>Whether logging is on or off.</td>
-</tr>
-
-<tr>
-<td>Debug Level</td>
-<td>1</td>
-<td>The anount of logging to produce, higher values give more detailed output.</td>
-</tr>
-
-</table>
+      <table border="1">
+        <tr> 
+          <th width="142">Setting</th>
+          <th width="60">Default</th>
+          <th width="441">Description</th>
+        </tr>
+        <tr> 
+          <td width="142">Debug Log</td>
+          <td width="60">OFF</td>
+          <td width="441">Whether logging is on or off.</td>
+        </tr>
+        <tr> 
+          <td width="142">Debug Level</td>
+          <td width="60">1</td>
+          <td width="441">The anount of logging to produce, higher values give 
+            more detailed output.</td>
+        </tr>
+        <tr> 
+          <td width="142">Debug Log File Name</td>
+          <td width="60">DScaler.txt</td>
+          <td width="441">The file to use to write logging.</td>
+        </tr>
+      </table>
 
 <!-- #EndEditable -->
 </td>
@@ -104,7 +107,7 @@ When switched on infomation is written to DScaler.txt in the DScaler directory.<
 </tr>
 </table>
 
-<!-- #EndTemplate -->
-</body>
+</body><!-- #EndTemplate -->
+
 </html>
 
