--- a/DScaler/Help/Noise.HTM
+++ b/DScaler/Help/Noise.HTM
@@ -76,7 +76,7 @@ values.</p>
 </tr>
 <tr>
 <td>Temporal Chroma Threshold</td>
-<td>6</td>
+          <td>7</td>
 <td>Pixel chroma differences below this are considered noise.</td>
 </tr>
 </table>
@@ -104,7 +104,7 @@ values.</p>
 </tr>
 </table>
 
-<!-- #EndTemplate -->
-</body>
+</body><!-- #EndTemplate -->
+
 </html>
 
