--- a/DScaler/Help/Overlay.HTM
+++ b/DScaler/Help/Overlay.HTM
@@ -57,39 +57,59 @@ height="2"></td>
 <!-- #BeginEditable "Text" -->
 <p>Setting specific to the Overlay</p>
 
-<table border="1">
-<tr>
-<th>Setting</th>
-<th>Default</th>
-<th>Description</th>
-</tr>
-
-<tr>
-<td>Back Buffers</td>
-<td>-1</td>
-<td>Number of back buffers to use. -1 means get maximun that card will support, 
-usually 2</td>
-</tr>
-
-<tr>
-<td>Overlay Colorkey</td>
-<td>RGB(32,16,16)</td>
-<td>Color to use for the overlay colorkey.</td>
-</tr>
-
-<tr>
-<td>Use Overlay Controls</td>
-<td>OFF</td>
-<td>Should we control the Graphic card's overlay controls.</td>
-</tr>
-
-<tr>
-<td>Overlay ???</td>
-<td>n/a</td>
-<td>Allows setting of the graphic card's overlay controls.</td>
-</tr>
-
-</table>
+      <table border="1">
+        <tr> 
+          <th>Setting</th>
+          <th>Default</th>
+          <th>Description</th>
+        </tr>
+        <tr> 
+          <td>Back Buffers</td>
+          <td>-1</td>
+          <td>Number of back buffers to use. -1 means get maximun that card will 
+            support, usually 2</td>
+        </tr>
+        <tr> 
+          <td>Overlay Colorkey</td>
+          <td>RGB(32,16,16)</td>
+          <td>Color to use for the overlay colorkey.</td>
+        </tr>
+        <tr> 
+          <td>Use Overlay Controls</td>
+          <td>OFF</td>
+          <td>Should we control the Graphic card's overlay controls.</td>
+        </tr>
+        <tr> 
+          <td>Overlay Brightness</td>
+          <td>75</td>
+          <td>Allows setting of the graphic card's overlay Brightness</td>
+        </tr>
+        <tr> 
+          <td>Overlay Contrast</td>
+          <td>100</td>
+          <td>Allows setting of the graphic card's overlay Contrast</td>
+        </tr>
+        <tr> 
+          <td>Overlay Hue</td>
+          <td>0</td>
+          <td>Allows setting of the graphic card's overlay Hue</td>
+        </tr>
+        <tr> 
+          <td>Overlay Saturation</td>
+          <td>100</td>
+          <td>Allows setting of the graphic card's overlay Saturation</td>
+        </tr>
+        <tr> 
+          <td>Overlay Gamma</td>
+          <td>1</td>
+          <td>Allows setting of the graphic card's overlay Gamma</td>
+        </tr>
+        <tr> 
+          <td>Overlay Sharpness</td>
+          <td>5</td>
+          <td>Allows setting of the graphic card's overlay Sharpness.</td>
+        </tr>
+      </table>
 
 <!-- #EndEditable -->
 </td>
@@ -115,7 +135,7 @@ usually 2</td>
 </tr>
 </table>
 
-<!-- #EndTemplate -->
-</body>
+</body><!-- #EndTemplate -->
+
 </html>
 
